--- a/generator/GoSteamLanguageGenerator/GoSteamLanguageGenerator.csproj
+++ b/generator/GoSteamLanguageGenerator/GoSteamLanguageGenerator.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>12</LangVersion>
     <RollForward>LatestMajor</RollForward>
   </PropertyGroup>
 
@@ -12,3 +13,4 @@
   </ItemGroup>
 
 </Project>
+
